# bitvavo-ws

./: .gitignore  Cargo.toml
bitvavo_tungstenite/: Cargo.toml
bitvavo_tungstenite/src/: bitvavo.rs  bitvavo_ws.rs  candle.rs  decode.rs  event.rs  get_balances.rs  get_book.rs  get_markets.rs  lib.rs  local_book.rs  market.rs  place_order.rs  price_level.rs  rug_float_serde.rs  sig.rs  subscribe.rs  trade.rs
example_market_data_poller/: Cargo.toml
example_market_data_poller/src/: main.rs
examples/market_data_poller/: Cargo.toml
examples/market_data_poller/src/: main.rs
src/: bitvavo_ws.rs  book.rs  event.rs  get_balances.rs  main.rs  markets.rs  rug_float_serde.rs  side.rs
stub_exchange/: Cargo.toml
stub_exchange/src/: main.rs
