[package]
name = "bitvavo-ws-rust"
version = "0.0.1"
edition = "2021"
repository = "https://github.com/bitvavo/bitvavo-ws-rust"

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
tungstenite = { version = "0.24.0", features = ["native-tls"] }

tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }

url = "2.5.3"
hmac = "0.13.0-pre.4"
sha2 = "0.11.0-pre.4"
futures-util = "0.3.31"
log = "0.4.22"
env_logger = "0.11.5"  # use the latest version if possible
rug = { version = "1.26.1", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
async-trait = "0.1.85"
futures = "0.3.31"
