[package]
name = "stub_exchange"
version = "0.0.1"
edition = "2024"

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
tungstenite = { version = "0.26.1", features = ["native-tls"] }
bitvavo_tungstenite = { path = "../bitvavo_tungstenite" }
env_logger = "0.11.6"
log = "0.4.22"
