[package]
name = "example_market_data_poller"
version = "0.1.0"
edition = "2024"

[dependencies]
bitvavo_tungstenite = { path = "../../bitvavo_tungstenite" }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
tungstenite = { version = "0.26.1", features = ["native-tls"] }

tokio = { version = "1.43.0", features = ["full"] }
tokio-tungstenite = { version = "0.26.1", features = ["native-tls"] }

url = "2.5.3"
hmac = "0.13.0-pre.4"
sha2 = "0.11.0-pre.4"
futures-util = "0.3.31"
log = "0.4.22"
env_logger = "0.11.5"  # use the latest version if possible
rug = { version = "1.26.1", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
